install/base/constraints/no-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBannedImageTags
metadata:
  name: ban-latest-tag
spec:
  enforcementAction: dryrun  
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    tags:
      - "latest"
