install/base/constraints/repo1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: images-must-come-from-repo1
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    repos: 
    - "registry1.dsop.io"
    - "repo1.dsop.io"
